<resources>
    <string name="app_name">Ploggy</string>
    <string name="foreground_service_notification_content_title">Ploggy is running</string>
    <plurals name="unread_posts_notification_content_title">
        <item quantity="one">%1$d new post</item>
        <item quantity="other">%1$d new posts</item>
    </plurals>
    <string name="unread_posts_notification_inbox_line"><![CDATA[<b>%1$s</b> %2$s]]></string>
    <string name="unread_posts_notification_inbox_summary">+%1$d more</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_self_detail">Your Status</string>
    <string name="navigation_drawer_item_group_list">Groups</string>
    <string name="navigation_drawer_item_friend_list">Friends</string>
    <string name="navigation_drawer_item_candidate_friend_list">Candidate Friends</string>
    <string name="navigation_drawer_item_log_entries">Activity Log</string>
    <string name="navigation_draw_header_groups">Groups</string>
    <string name="navigation_draw_header_friends">Friends</string>
    <string name="candidate_friend_list_group_seperator">, </string>
    <string name="self_submenu">You...</string>
    <string name="developer_tools_submenu">Developer Tools...</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="action_add_group">Add Group</string>
    <string name="action_edit_group">Edit Group</string>
    <string name="action_add_group_member">Add Member</string>
    <string name="action_show_self_detail">Your Status</string>
    <string name="action_generate_self">Re-generate Your Identity</string>
    <string name="action_email_self">Email Your Identity</string>
    <string name="action_save_identity_to_file">Save Your Identity to a File</string>
    <string name="action_show_activity_log">Activity Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_run_tests">Run Diagnostic Tests</string>
    <string name="action_add_echo_bot">Add Echo Bot</string>
    <string name="action_quit">Quit</string>
    <string name="action_friend_list_delete_friend">Delete Friend</string>
    <string name="action_group_list_delete_group">Delete Group</string>
    <string name="action_compose_post_remove_picture">Remove picture from post</string>
    <string name="select_groups">Select groups</string>
    <plurals name="select_groups_subtitle">
        <item quantity="one">%1$d group selected</item>
        <item quantity="other">%1$d groups selected</item>
    </plurals>
    <string name="label_delete_group_title">Delete Group</string>
    <string name="label_delete_group_message">Are you sure you want to delete %1$s?</string>
    <string name="label_delete_group_positive">Delete</string>
    <string name="label_delete_group_negative">Cancel</string>
    <string name="select_friends">Select friends</string>
    <plurals name="select_friends_subtitle">
        <item quantity="one">%1$d friend selected</item>
        <item quantity="other">%1$d friends selected</item>
    </plurals>
    <string name="label_delete_friend_title">Delete Friend</string>
    <string name="label_delete_friend_message">Are you sure you want to delete %1$s?</string>
    <string name="label_delete_friend_positive">Delete</string>
    <string name="label_delete_friend_negative">Cancel</string>
    <string name="prompt_no_status_updates_sent">No updates sent</string>
    <string name="prompt_no_status_updates_received">No updates received</string>
    <string name="prompt_no_street_address_reported">No street address reported</string>
    <string name="prompt_unknown_distance">Unknown distance</string>
    <string name="prompt_nfc_not_enabled">NFC is not enabled</string>
    <string name="prompt_nfc_push_complete">Your identity was beamed to a friend</string>
    <string name="label_email_self_title">Email Your Identity to a Friend</string>
    <string name="label_email_self_message">Warning: sending your identity via email will allow a 3rd party to link you and your friend.</string>
    <string name="label_email_self_positive">I understand the risk</string>
    <string name="label_email_self_negative">Cancel</string>
    <string name="identity_email_body"><![CDATA[<a href=\"\">Add me as a Ploggy friend</a>]]></string>
    <string name="label_save_identity_to_file_title">Save Your Identity to a File</string>
    <string name="label_save_identity_to_file_message">Warning: sending your identity outside of Ploggy will allow a 3rd party to link you and your friend.</string>
    <string name="label_save_identity_to_file_positive">I understand the risk</string>
    <string name="label_save_identity_to_file_negative">Cancel</string>
    <string name="toast_identity_saved_to_file">File \"%1$s\" has been saved to folder \"%2$s\"</string>
    <string name="label_generate_self_title">Generate Your Identity</string>
    <string name="label_generate_self_nickname">Nickname:</string>
    <string name="label_generate_self_fingerprint">Fingerprint:</string>
    <string name="button_generate_self_regenerate">Re-generate</string>
    <string name="button_generate_self_save">Save</string>
    <string name="prompt_generate_self_progress">Generating key material…</string>
    <string name="label_add_friend_hint">To add a friend, use Android Beam with two devices running Ploggy in the foreground; or click a .ploggy link...</string>
    <string name="label_add_friend_title">Add Friend</string>
    <string name="label_add_friend_friend_fingerprint">Fingerprint:</string>
    <string name="button_add_friend_add">Add</string>
    <string name="prompt_add_friend_friend_already_exists">A friend with the nickname %1$s already exists</string>
    <string name="prompt_add_friend_friend_added">Added friend %1$s</string>
    <string name="label_compose_post_content_hint">Compose your post</string>
    <string name="prompt_compose_post_select_picture">Select picture for your post</string>
    <string name="label_status_details_identity">Identity</string>
    <string name="label_status_details_location">Location</string>
    <string name="label_status_details_history">History</string>
    <string name="label_status_details_fingerprint">Fingerprint:</string>
    <string name="format_distance_meters">%1$s meters</string>
    <string name="format_distance_kilometers">%1$s kilometers</string>
    <string name="label_status_details_location_street_address">Street address:</string>
    <string name="label_status_details_location_distance">Approximate distance from your location:</string>
    <string name="label_status_details_location_coordinates">Coordinates:</string>
    <string name="label_status_details_location_timestamp">Location updated at:</string>
    <string name="label_status_details_last_received_from_timestamp">Last communication received from friend:</string>
    <string name="label_status_details_bytes_received_from">Data transfer from friend:</string>
    <string name="label_status_details_last_sent_to_timestamp">Last communication sent to friend:</string>
    <string name="label_status_details_bytes_sent_to">Data transfer to friend:</string>
    <string name="label_status_details_added_timestamp">Friend added at:</string>
    <string name="format_status_details_coordinates">%1$.4f°, %2$.4f°</string>
    <string name="prompt_status_details_data_not_found">Status details not found</string>
    <string name="label_edit_group_title">Group</string>
    <string name="label_edit_group_name">Name:</string>
    <string name="label_edit_group_members">Members</string>
    <string name="label_add_group_member">Add Member</string>
    <string name="action_edit_group_remove_member">Remove Member</string>
    <string name="prompt_edit_group_add_member">Add Member to %1$s</string>
    <string name="button_edit_group_save">Save</string>
    <string name="prompt_edit_group_back">Press back again to discard changes</string>
    <string name="prompt_edit_group_already_exists">A group with the name %1$s already exists</string>
    <string name="prompt_edit_group_saved">Saved %1$s</string>
    <string name="format_download_progress">%1$.1f%%</string>
    <string name="no_posts">No posts</string>
    <string name="no_location">No location</string>
    <string name="post_location_title">Publication location</string>
    <string name="post_not_delivered_title">Not delivered</string>
    <string name="post_not_delivered_message">No one has received this post</string>
    <string name="post_partially_delivered_title">Partially delivered</string>
    <string name="post_fully_delivered_title">Fully delivered</string>
    <string name="post_fully_delivered">All group members have received this post</string>
    <string name="preference_privacy_title">Privacy</string>
    <string name="preference_use_geocoder_title">Use Geocoder</string>
    <string name="preference_use_geocoder_summary">Use 3rd party service to map current latitude/longitude to street address</string>
    <string name="preference_limit_location_precision_title">Limit Location Precision</string>
    <string name="preference_limit_location_precision_summary">Reduce the precision of shared location</string>
    <string name="preference_location_precision_title">Location Precision</string>
    <string name="preference_location_precision_summary">Radius of shared location</string>
    <string name="preference_location_precision_units">meters</string>
    <string name="preference_automatic_location_sharing_title">Automatic Location Sharing</string>
    <string name="preference_automatic_location_sharing_summary">Periodically share your location automatically</string>
    <string name="preference_limit_location_sharing_time_title">Limit Location Sharing by Time</string>
    <string name="preference_limit_location_sharing_time_summary">Share your location only at certain times of the day</string>
    <string name="preference_limit_location_sharing_time_not_before_title">Not before</string>
    <string name="preference_limit_location_sharing_time_not_before_summary">Do not share location before this time</string>
    <string name="preference_limit_location_sharing_time_not_after_title">Not after</string>
    <string name="preference_limit_location_sharing_time_not_after_summary">Do not share location after this time</string>
    <string name="preference_limit_location_sharing_day_title">Limit Location Sharing by Day</string>
    <string name="preference_limit_location_sharing_day_summary">Share your location only on certain days of the week</string>
    <string name="preference_performance_title">Performance</string>
    <string name="preference_use_mobile_data_title">Use Mobile Data</string>
    <string name="preference_use_mobile_data_summary">Send and receive data while using a mobile network</string>
    <string name="preference_exchange_files_wifi_only_title">Exchange Files on Wi-Fi Only</string>
    <string name="preference_exchange_files_wifi_only_summary">Send and receive picture, attachment, and file data only while using Wi-Fi data</string>
    <string name="preference_enable_battery_saver_title">Enable Battery Saver</string>
    <string name="preference_enable_battery_saver_summary">Stop sending your location and receiving friend locations when battery level is below threshold</string>
    <string name="preference_battery_saver_level_title">Battery Saver Level</string>
    <string name="preference_battery_saver_level_summary"></string>
    <string name="preferences_battery_saver_level_units">%</string>
    <string name="preference_location_fix_period_title">Location Fix Period</string>
    <string name="preference_location_fix_period_summary">How long to run location services when obtaining a new location fix (longer period is more accurate but uses more battery)</string>
    <string name="preference_location_fix_period_units">seconds</string>
</resources>