<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/self_submenu"
          android:title="@string/self_submenu"
          android:orderInCategory="1001"
          android:showAsAction="never" >
          <menu>
              <item android:id="@+id/action_show_self_detail"
                    android:title="@string/action_show_self_detail"
                    android:icon="@drawable/ic_navigation_drawer_self_detail"
                    android:showAsAction="never" />
              <item android:id="@+id/action_generate_self"
                    android:title="@string/action_generate_self"
                    android:icon="@drawable/ic_action_edit"
                    android:showAsAction="never" />
              <item android:id="@+id/action_email_identity"
                    android:title="@string/action_email_self"
                    android:icon="@drawable/ic_action_email_self"
                    android:showAsAction="never" />
              <item android:id="@+id/action_save_identity_to_file"
                    android:title="@string/action_save_identity_to_file"
                    android:icon="@drawable/ic_action_content_save"
                    android:showAsAction="never" />
        </menu>
    </item>
    <item android:id="@+id/developer_tools_submenu"
          android:title="@string/developer_tools_submenu"
          android:orderInCategory="1002"
          android:showAsAction="never" >
          <menu>
              <item android:id="@+id/action_run_tests"
                    android:title="@string/action_run_tests"
                    android:showAsAction="never" />
              <item android:id="@+id/action_add_echo_bot"
                    android:title="@string/action_add_echo_bot"
                    android:showAsAction="never" />
          </menu>
    </item>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:orderInCategory="1003"
          android:showAsAction="never" />
    <item android:id="@+id/action_show_activity_log"
          android:title="@string/action_show_activity_log"
          android:icon="@drawable/ic_navigation_drawer_log_entries"
          android:orderInCategory="1004"
          android:showAsAction="never" />
    <item android:id="@+id/action_quit"
          android:title="@string/action_quit"
          android:orderInCategory="1005"
          android:showAsAction="never" />
</menu>
