<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friend_status_details_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FragmentFriendDetail" >

    <TextView
        android:id="@+id/friend_status_details_identity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:gravity="center"
        android:text="@string/label_status_details_identity"
        android:typeface="sans"
        android:textSize="24dip"
        android:textStyle="bold"
        android:textColor="#F0F0FF"
        android:background="#687C97" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/friend_status_details_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="4dip">
 
            <ImageView
                android:id="@+id/friend_status_details_avatar_image"
                android:layout_width="100dip"
                android:layout_height="100dip" />
 
        </LinearLayout>
 
        <TextView
            android:id="@+id/friend_status_details_nickname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/friend_status_details_avatar"
            android:typeface="sans"
            android:textSize="24dip"
            android:textStyle="bold" />
 
        <TextView
            android:id="@+id/friend_status_details_fingerprint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/friend_status_details_avatar"
            android:layout_below="@+id/friend_status_details_nickname_text"
            android:text="@string/label_status_details_fingerprint"
            android:typeface="sans"
            android:textSize="12dip"
            android:textStyle="bold" />
 
        <TextView
            android:id="@+id/friend_status_details_fingerprint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/friend_status_details_avatar"
            android:layout_below="@+id/friend_status_details_fingerprint_label"
            android:typeface="sans"
            android:textSize="12dip" />

    </RelativeLayout>

    <TextView
        android:id="@+id/friend_status_details_location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:gravity="center"
        android:text="@string/label_status_details_location"
        android:typeface="sans"
        android:textSize="24dip"
        android:textStyle="bold"
        android:textColor="#F0F0F0"
        android:background="#687C97" />

    <TextView
        android:id="@+id/friend_status_details_location_street_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_location_street_address"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_location_street_address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_location_distance_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_location_distance"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_location_distance_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_location_coordinates_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_location_coordinates"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_location_coordinates_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_location_timestamp_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_location_timestamp"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_location_timestamp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_history_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:gravity="center"
        android:text="@string/label_status_details_history"
        android:typeface="sans"
        android:textSize="24dip"
        android:textStyle="bold"
        android:textColor="#F0F0F0"
        android:background="#687C97" />

    <TextView
        android:id="@+id/friend_status_details_last_received_from_timestamp_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_last_received_from_timestamp"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_last_received_from_timestamp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_bytes_received_from_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_bytes_received_from"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_bytes_received_from_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_last_sent_to_timestamp_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_last_sent_to_timestamp"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_last_sent_to_timestamp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_bytes_sent_to_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_bytes_sent_to"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />
 
    <TextView
        android:id="@+id/friend_status_details_bytes_sent_to_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/friend_status_details_added_timestamp_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_status_details_added_timestamp"
        android:typeface="sans"
        android:textSize="12dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/friend_status_details_added_timestamp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textSize="12dip" />

</LinearLayout>

</ScrollView>
