<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ActivityGenerateSelf" >

    <TextView
        android:id="@+id/generate_self_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:gravity="center"
        android:text="@string/label_generate_self_title"
        android:typeface="sans"
        android:textSize="24dip"
        android:textStyle="bold"
        android:textColor="#F0F0F0"
        android:background="#687C97" />

    <RelativeLayout
    	android:id="@+id/generate_self_main_section"
    	android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/generate_self_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="4dip">
 
            <ImageView
                android:id="@+id/generate_self_avatar_image"
                android:layout_width="150dip"
                android:layout_height="150dip" />
 
        </LinearLayout>
 
        <TextView
            android:id="@+id/generate_self_nickname_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/generate_self_avatar"
            android:layout_toRightOf="@+id/generate_self_avatar"
            android:text="@string/label_generate_self_nickname"
            android:typeface="sans"
            android:textSize="24dip"
            android:textStyle="bold" />
 
        <EditText
            android:id="@+id/generate_self_nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/generate_self_avatar"
            android:layout_below="@+id/generate_self_nickname_label"
            android:typeface="sans"
            android:textSize="24dip"
            android:singleLine="true" />
 
        <TextView
            android:id="@+id/generate_self_fingerprint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/generate_self_avatar"
            android:layout_below="@+id/generate_self_nickname_edit"
            android:text="@string/label_generate_self_fingerprint"
            android:typeface="sans"
            android:textSize="12dip"
            android:textStyle="bold" />
 
        <TextView
            android:id="@+id/generate_self_fingerprint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/generate_self_avatar"
            android:layout_below="@+id/generate_self_fingerprint_label"
            android:typeface="sans"
            android:textSize="12dip" />

        <Button
            android:id="@+id/generate_self_regenerate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/generate_self_avatar"
            android:layout_below="@+id/generate_self_fingerprint_text"
            android:layout_alignParentRight="true"
            android:text="@string/button_generate_self_regenerate"
            android:typeface="sans"
            android:textSize="16dip" />

        <Button
            android:id="@+id/generate_self_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/generate_self_avatar"
            android:layout_below="@id/generate_self_fingerprint_text"
            android:layout_alignParentRight="true"
            android:text="@string/button_generate_self_save"
            android:typeface="sans"
            android:textSize="16dip" />

    </RelativeLayout>

</LinearLayout>
