<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ActivityAddFriend" >

    <TextView
        android:id="@+id/add_friend_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:gravity="center"
        android:text="@string/label_add_friend_title"
        android:typeface="sans"
        android:textSize="24dip"
        android:textStyle="bold"
        android:textColor="#F0F0F0"
        android:background="#687C97" />

    <TextView
        android:id="@+id/add_friend_hint_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_add_friend_hint"
        android:typeface="sans"
        android:textSize="12dip" />

    <RelativeLayout
    	android:id="@+id/add_friend_friend_section"
    	android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:id="@+id/add_friend_friend_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="4dip">
 
            <ImageView
                android:id="@+id/add_friend_friend_avatar_image"
                android:layout_width="150dip"
                android:layout_height="150dip" />
 
        </LinearLayout>
 
        <TextView
            android:id="@+id/add_friend_friend_nickname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/add_friend_friend_avatar"
            android:layout_toRightOf="@+id/add_friend_friend_avatar"
            android:typeface="sans"
            android:textSize="24dip"
            android:textStyle="bold" />
 
        <TextView
            android:id="@+id/add_friend_friend_fingerprint_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_friend_friend_nickname_text"
            android:layout_toRightOf="@+id/add_friend_friend_avatar"
            android:text="@string/label_add_friend_friend_fingerprint"
            android:typeface="sans"
            android:textSize="12dip"
            android:textStyle="bold" />
 
        <TextView
            android:id="@+id/add_friend_friend_fingerprint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_friend_friend_fingerprint_label"
            android:layout_toRightOf="@+id/add_friend_friend_avatar"
            android:typeface="sans"
            android:textSize="12dip" />
    
        <Button
            android:id="@+id/add_friend_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_friend_friend_fingerprint_text"
            android:layout_alignParentRight="true"
            android:text="@string/button_add_friend_add"
            android:typeface="sans"
            android:textSize="16dip" />

    </RelativeLayout>

</LinearLayout>
